Code Cleanup, Converting classes to records